--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="timeline">
     <div class="swiper-container">
       <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background-image: url(http://via.placeholder.com/1250x950;" data-year="2011">
+        <div class="swiper-slide" style="background-image: url(https://images.unsplash.com/photo-1474557054156-42a84a8087c3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=74e593b4c60bad11ee88ed3bd068ea2b&auto=format&fit=crop&w=1350&q=80);" data-year="2011">
           <div class="swiper-slide-content"><span class="timeline-year">2011</span>
             <h4 class="timeline-title">Our nice super title</h4>
             <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
